fix: sticky loading indicator on mobile to keep it visible

--- a/src/routes/MetaDetails/StreamsList/styles.less
+++ b/src/routes/MetaDetails/StreamsList/styles.less
@@ -198,5 +198,13 @@
                 background-color: transparent;
             }
         }
+
+        .addons-loading-container {
+            position: sticky;
+            bottom: 0;
+            margin: 0;
+            padding: 1em;
+            background-color: var(--primary-background-color);
+        }
     }
 }
